--- a/src/styles.css
+++ b/src/styles.css
@@ -3,14 +3,36 @@
   padding: 0%;
   box-sizing: border-box;
 }
+
 .paging {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 body {
   background-color: lightblue;
 }
+
+footer {
+  display: flex;
+  margin-top: 1rem;
+  font-size: 14px;
+  justify-content: space-between;
+  color: #2d2d2d;
+  background-color: #fafafb;
+}
+
+.footer-text {
+  display: flex;
+  margin: 1rem;
+}
+
+.footer-icon {
+  display: flex;
+  margin: 1rem;
+}
+
 .home {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -18,17 +40,26 @@ body {
   grid-auto-rows: minmax(100px, auto);
   padding: 1rem;
 }
+
 .App {
   font-family: sans-serif;
   text-align: center;
 }
+
 @media only screen and (max-width: 700px) {
   .home {
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
 @media only screen and (max-width: 400px) {
   .home {
     grid-template-columns: repeat(1, 1fr);
+  }
+  footer {
+    display: flex;
+    font-size: 14px;
+    flex-direction: column;
+    align-items: center;
   }
 }
